// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<table
  cellPadding="0"
  cellSpacing="0"
  className="Table"
  data-test-id="cf-ui-table"
>
  <TableBody
    testId="cf-ui-table-body"
  >
    <SkeletonRow
      columnCount={5}
      rowCount={1}
    />
  </TableBody>
</table>
`;

exports[`renders the component with 10 cells 1`] = `
<table
  cellPadding="0"
  cellSpacing="0"
  className="Table"
  data-test-id="cf-ui-table"
>
  <TableBody
    testId="cf-ui-table-body"
  >
    <SkeletonRow
      columnCount={10}
      rowCount={1}
    />
  </TableBody>
</table>
`;

exports[`renders the component with 10 rows 1`] = `
<table
  cellPadding="0"
  cellSpacing="0"
  className="Table"
  data-test-id="cf-ui-table"
>
  <TableBody
    testId="cf-ui-table-body"
  >
    <SkeletonRow
      columnCount={5}
      rowCount={10}
    />
  </TableBody>
</table>
`;
